bk_ida/gccida/c0/product_cheap_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/product_cheap_p/src/loop.c:8283:16: error: use of undeclared identifier 'machine_mode'
expand_mult( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)aa), aa, ba, 0LL, 1); 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/product_cheap_p/src/loop.c:8283:31: error: expected expression
expand_mult( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)aa), aa, ba, 0LL, 1); 
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/product_cheap_p/src/obj/loop.o] Error 1
